# content-formatting

./: .gitignore  README.md  pyproject.toml
examples/01_basic_nav/: 01_basic_nav.ipynb
examples/01_basic_nav/scripts/: index.html
examples/01_basic_nav/scripts/css/: styles.css
examples/01_basic_nav/scripts/js/: contentLoader.js  mediaLoader.js  navigation.js  tableGenerator.js
examples/01_basic_nav/scripts/pandoc/: docx_cleanup.lua
examples/02_floating_nav/: 02_floating_nav.ipynb  docx_converter.py
examples/02_floating_nav/scripts/: index.html
examples/02_floating_nav/scripts/js/: auto-wrap-sections.js  contentLoader.js  navigation.js  tableGenerator.js
examples/02_floating_nav/scripts/pandoc/: docx_cleanup.lua
examples/03_multi-page/: 03_multi-page.ipynb  docx_converter.py
examples/03_multi-page/scripts/: index.html
examples/03_multi-page/scripts/css/: styles.css
examples/03_multi-page/scripts/js/: contentLoader.js  insertBr.js  mediaLoader.js  tableGenerator.js
examples/03_multi-page/scripts/pandoc/: docx_cleanup.lua
examples/04_multi-page-tsx/: 04_multi-page-tsx.ipynb  docx_converter.py
examples/04_multi-page-tsx/scripts/js/: mediaLoader.js
examples/05_multi-page-json/: 05_multi-page-json.ipynb  docx_converter.py
examples/05_multi-page-json/scripts/js/: auto-wrap-sections.js  insertBr.js  mediaLoader.js  navigation.js
examples/05_multi-page-json/scripts/pandoc/: docx_cleanup.lua
examples/06_platform-json/: 06_platform-json.ipynb  docx_converter.py  html_converter.py
examples/06_platform-json/scripts/: index.html
