[tool.poetry]
name = "content-formatting"
version = "0.1.0"
description = ""
authors = ["Chris-airseed <chasselerharm@airseedtech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandoc = "^2.4"
pypandoc = "^1.15"
pypandoc-binary = "^1.15"
python-docx = "^1.1.2"
beautifulsoup4 = "^4.13.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
